Remove Class 1–5 and Class 6–8 links from nav

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <nav>
   <a href="#">Home</a>
-  <a href="#">Class 1–5</a>
-  <a href="#">Class 6–8</a>
+  <a href="#">Class 8</a>
   <a href="#">Class 9–10</a>
   <a href="#">Class 11–12</a>
 </nav>
